# LightSwitch

./: CMakeLists.txt  README.md
src/: light_controller_interface.h  light_scheduler.cpp  light_scheduler.hpp  light_scheduler.tests.cpp  switch_lib.cpp  switch_lib.hpp  time_service_interface.h  time_service_interface.hpp
test/: light_scheduler.cpp  main.cpp  test_add.cpp
